--- a/src/components/Expense/ExpenseItem.css
+++ b/src/components/Expense/ExpenseItem.css
@@ -3,7 +3,7 @@
   width: 90%;
   background-color: rgb(121, 121, 121);
   border-radius: 4px;
-  margin: 1rem 2rem;
+  margin: 1rem auto;
   padding: 0.5rem 1rem;
 }
 
