--- a/src/components/Expense/Expense.css
+++ b/src/components/Expense/Expense.css
@@ -4,4 +4,14 @@
   border-radius: 4px;
   margin: 2rem auto;
   padding: 0.5rem 0;
+  color: white;
 }
+
+.expenseItemDiv {
+  text-align: center;
+}
+
+
+
+
+
